fixed main for memcount

--- a/projects/pa3/xv6/Makefile
+++ b/projects/pa3/xv6/Makefile
@@ -150,6 +150,11 @@ _forktest: forktest.o $(ULIB)
 	$(LD) $(LDFLAGS) -N -e main -Ttext 0 -o _forktest forktest.o ulib.o usys.o
 	$(OBJDUMP) -S _forktest > forktest.asm
 
+memcount-test:
+	for number in 1 10 20 50 100 1000 5000 10000 ; do \
+    	 memcount $$number ; \
+	done
+
 mkfs: mkfs.c fs.h
 	gcc -Werror -Wall -o mkfs mkfs.c
 
