--- a/projects/pa4/src/xv6/Makefile
+++ b/projects/pa4/src/xv6/Makefile
@@ -178,6 +178,7 @@ UPROGS=\
 	_callcount\
 	_memcount\
 	_memcounttest\
+	_smallfiletest\
 
 
 fs.img: mkfs README $(UPROGS)
@@ -248,7 +249,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c\
-	printf.c umalloc.c callcount.c memcount.c memcounttest.c\
+	printf.c umalloc.c callcount.c memcount.c memcounttest.c smallfiletest.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
